<resources>
    <string name="app_name">JukeDJ-Hub</string>

    <string name="title">JukeDJ</string>
    <string name="action_settings">Settings</string>
    <string name="usersOnline">Users online:</string>
    <string name="skipVotes">Skip Votes: 0/0</string>
    <string name="noMusicPlaying">No music playing!</string>
    <string name="promptBuy">Want to get rid of ads? Click the button to buy pro!</string>
</resources>
