<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="60sp" />

    <WebView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wv_Song"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv_Song"
        android:layout_marginTop="85dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tb_SongPlaying" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/noMusicPlaying"
        android:id="@+id/tb_SongPlaying"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:scrollbars="vertical">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/usersOnline"
                android:id="@+id/tv_Users"
                android:layout_alignParentTop="true" />

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skipVotes"
        android:id="@+id/tv_SkipVotes"
        android:layout_gravity="end"
        android:layout_alignTop="@+id/scrollView"
        android:layout_alignEnd="@+id/scrollView" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <VideoView
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:id="@+id/vv_Ad"
                    android:layout_centerHorizontal="true"
                    android:visibility="invisible" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_Buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/vv_Ad"
                android:text="Remove Ads"
                android:layout_centerHorizontal="true"
                android:visibility="invisible" />
        </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promptBuy"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true"
        android:id="@+id/tv_PromptBuy"
        android:textSize="25sp"
        android:autoLink="all"
        android:visibility="invisible" />
</RelativeLayout>
